# math70076_assessment_2

./: .Rhistory  README.md  collecting_datasets.py  main.Rmd  math70076_assessment_2.Rproj
data/: Premier_League2223.csv  Premier_League2324.csv
output/: results_players_only.csv  results_players_players_and_team.csv  results_team_players_and_team.csv
scrapingFBREF/: LICENSE  README.md  pyproject.toml  requirement.txt
scrapingFBREF/scrapingFBREF/: __init__.py  cleaning.py  scraping.py
scrapingFBREF/tests/: test_model.py
